# easymenu

./: .gitignore  README.md  manage.py  menu.htm  pyproject.toml
easymenu/: asgi.py  settings.py  urls.py  wsgi.py
utils/: new_secret_key.py
uzlatekachny/: admin.py  apps.py  models.py  translation.py  urls.py  views.py
uzlatekachny/management/commands/: import_html.py
uzlatekachny/migrations/: 0001_initial.py  0001_squashed_0004_alter_food_ingredients_alter_food_notes.py  0002_alter_food_ingredients_alter_food_notes.py  0002_alter_food_options_category_name_cs_category_name_de_and_more.py  0002_alter_food_price_alter_food_price_currency.py  0003_food_order_alter_food_id.py  0004_alter_food_ingredients_alter_food_notes.py  0005_alter_food_order.py  0006_alter_food_order.py  0007_alter_food_id.py  0008_alter_food_options.py  0009_alter_food_order.py  0010_alter_food_options_food_add_time.py  0011_alter_food_options.py  0012_alter_food_options.py  0013_alter_food_options.py  0014_alter_food_options.py  0015_alter_food_options.py  0016_alter_food_options_rename_add_time_food_change_time.py
uzlatekachny/static/: category_hide.js  styles.css
uzlatekachny/templates/: index.html
