[tool.poetry]
name = "easymenu"
version = "0.1.0"
description = "A small Python/Django web application to easily create a food or drink menu in multiple languages."
authors = ["jiri.one"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.3"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
